@@ -29,6 +29,11 @@ import org.apache.hadoop.classification.InterfaceAudience;
 public class HdfsConfiguration extends Configuration {
   static {
     addDeprecatedKeys();
+
+    // adds the default resources
+    Configuration.addDefaultResource("hdfs-default.xml");
+    Configuration.addDefaultResource("hdfs-site.xml");
+
   }
 
   public HdfsConfiguration() {
@@ -41,6 +46,20 @@ public class HdfsConfiguration extends Configuration {
 
   public HdfsConfiguration(Configuration conf) {
     super(conf);
+  }
+  
+  /**
+   * This method is here so that when invoked, HdfsConfiguration is class-loaded if
+   * it hasn't already been previously loaded.  Upon loading the class, the static 
+   * initializer block above will be executed to add the deprecated keys and to add
+   * the default resources.   It is safe for this method to be called multiple times 
+   * as the static initializer block will only get invoked once.
+   * 
+   * This replaces the previously, dangerous practice of other classes calling
+   * Configuration.addDefaultResource("hdfs-default.xml") directly without loading 
+   * HdfsConfiguration class first, thereby skipping the key deprecation
+   */
+  public static void init() {
   }
 
   private static void deprecate(String oldKey, String newKey) {
