@@ -75,8 +75,7 @@ import org.apache.hadoop.util.StringUtils;
 public class SecondaryNameNode implements Runnable {
     
   static{
-    Configuration.addDefaultResource("hdfs-default.xml");
-    Configuration.addDefaultResource("hdfs-site.xml");
+    HdfsConfiguration.init();
   }
   public static final Log LOG = 
     LogFactory.getLog(SecondaryNameNode.class.getName());
