@@ -66,8 +66,7 @@ import org.apache.hadoop.util.ToolRunner;
 @InterfaceAudience.Private
 public class DFSck extends Configured implements Tool {
   static{
-    Configuration.addDefaultResource("hdfs-default.xml");
-    Configuration.addDefaultResource("hdfs-site.xml");
+    HdfsConfiguration.init();
   }
 
   private final UserGroupInformation ugi;
@@ -255,8 +254,7 @@ public class DFSck extends Configured implements Tool {
   }
 
   static{
-    Configuration.addDefaultResource("hdfs-default.xml");
-    Configuration.addDefaultResource("hdfs-site.xml");
+    HdfsConfiguration.init();
   }
   
   public static void main(String[] args) throws Exception {
